crates/ty_python_semantic/resources/mdtest/snapshots/assignment_diagnosti…_-_Subscript_assignment…_-_Invalid_value_type_-_For_a_`list`_(e7ebbd4af387837c).snap
---
source: crates/ruff_mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: assignment_diagnostics.md - Subscript assignment diagnostics - Invalid value type - For a `list`
mdtest path: crates/ty_python_semantic/resources/mdtest/subscript/assignment_diagnostics.md
---

# Python source files

## mdtest_snippet.py

```
1 | numbers: list[int] = []
2 | numbers[0] = "three"  # error: [invalid-assignment]
```

# Diagnostics

```
error[invalid-assignment]: Invalid subscript assignment with key of type `Literal[0]` and value of type `Literal["three"]` on object of type `list[int]`
 --> src/mdtest_snippet.py:2:1
  |
2 | numbers[0] = "three"  # error: [invalid-assignment]
  | ^^^^^^^^^^^^^^^^^^^^
  |

```
