crates/ty_python_semantic/resources/mdtest/snapshots/assignment_diagnosti…_-_Subscript_assignment…_-_Wrong_value_type_for…_(57372b65e30392a8).snap
---
source: crates/ruff_mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: assignment_diagnostics.md - Subscript assignment diagnostics - Wrong value type for one element of a union
mdtest path: crates/ty_python_semantic/resources/mdtest/subscript/assignment_diagnostics.md
---

# Python source files

## mdtest_snippet.py

```
1 | def _(config: dict[str, int] | dict[str, str]) -> None:
2 |     config["retries"] = 3  # error: [invalid-assignment]
```

# Diagnostics

```
error[invalid-assignment]: Invalid subscript assignment with key of type `Literal["retries"]` and value of type `Literal[3]` on object of type `dict[str, str]`
 --> src/mdtest_snippet.py:2:5
  |
2 |     config["retries"] = 3  # error: [invalid-assignment]
  |     ^^^^^^^^^^^^^^^^^^^^-
  |                         |
  |                         Expected value of type `str`, got `Literal[3]`
  |
info: The full type of the subscripted object is `dict[str, int] | dict[str, str]`

```
