crates/ty_python_semantic/resources/mdtest/snapshots/async.md_-_Async_with_statement…_-_Context_expression_w…_(28ef812089a32e6a).snap
---
source: crates/mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: async.md - Async with statements - Context expression with possibly-unbound union variants
mdtest path: crates/ty_python_semantic/resources/mdtest/with/async.md
---

# Python source files

## mdtest_snippet.py

```
 1 | class Manager1:
 2 |     async def __aenter__(self) -> str:
 3 |         return "foo"
 4 | 
 5 |     async def __aexit__(self, exc_type, exc_value, traceback): ...
 6 | 
 7 | class NotAContextManager: ...
 8 | 
 9 | async def _(context_expr: Manager1 | NotAContextManager):
10 |     # error: [invalid-context-manager] "Object of type `Manager1 | NotAContextManager` cannot be used with `async with` because the methods `__aenter__` and `__aexit__` are possibly missing"
11 |     async with context_expr as f:
12 |         reveal_type(f)  # revealed: str
```

# Diagnostics

```
error[invalid-context-manager]: Object of type `Manager1 | NotAContextManager` cannot be used with `async with` because the methods `__aenter__` and `__aexit__` are possibly missing
  --> src/mdtest_snippet.py:11:16
   |
11 |     async with context_expr as f:
   |                ^^^^^^^^^^^^
   |
info: `NotAContextManager` does not implement `__aenter__` or `__aexit__`

```
